<resources>
    <string name="app_name">SpeechMap</string>
    <string name="tab_text_to_speech">Login</string>
    <string name="tab_speech_to_text">Stats</string>
    <string name="tab_gps">Graph</string>
    <string name="tab_map">History/News</string>
    <string name="text_to_speech"></string>
    <string name="enter_text">Enter Text</string>
    <string name="myNameZNumber">Ali Fatta Z23419429</string>
    <string name="speech_to_text">Speech To Text</string>
    <string name="result">Result</string>
    <string name="microphone_icon">Microphone Icon</string>
    <string name="location_base_service">Location Base Service</string>
    <string name="get_location">Get Location</string>
    <string name="google_map">Google Map</string>
    <string name="location">Location</string>



    <string name="newnew">  Although we do not know officially know how the Coronavirus began, we do know that
    the first case was in Wuhan, China in late December. The first death of this virus was on January 11th 2019.
    Less than a month later the virus began spreading worldwide. With confirmed cases in countries such as the United
    States, Japan, and more, the World Health Organization declared this virus a Pandemic. Countries are now limiting both
    travel and large gatherings to prevent the spread of this virus. \n

    </string>

    <string name="newhelp"> \n Some of the signs of Covid-19 include, Fever, Cough, difficulty breathing,
        chills, sore throat, and muscle pain. \n Since there is not a cure for this virus yet, one should
    be very cautious when interacting with others. Some ways to prevent the spread of this virus is to
         keep a safe distance from others, keep your hands clean, cover your face and most importantly try to
        stay home as much as possible. \n
        Provided below are links to the to websites of the WHO and the CDC.
    </string>

    <string
        name="messageWithLink"><a href="https://www.who.int/health-topics/coronavirus#tab=tab_1">World Health Organization</a></string>

    <string
        name="messageWithLink2"><a href="https://www.cdc.gov/coronavirus/2019-ncov/symptoms-testing/symptoms.html">Centers for Disease Control and Prevention</a></string>


    <string name="newnews">  It has been more than two months since the first case of the virus was found on US soil. Since then
        there has been major change occurring in the United States. For instance, there have been millions of people losing their job.
        As a result there have been over 20 million people who have filed for unemployment. One reason for why there are
        so many unemployed people is because people are not buying as much as before and the economy has been suffering, so companies can not
        afford to keep as many employees as before. \n\n
        In the most recent update, President Donald Trump is allowing states to slowly reopen. The main reason for this
        decision is because of how negatively impacted our economy has been since the start of Covid-19.
        \n\nMore information about Covid-19 is found everyday, so visit the sites below to get the most up to date information.
    </string>

    <string
        name="messageWithLink3"><a href="https://www.cnn.com/world/live-news/coronavirus-pandemic-04-30-20-intl/index.html">CNN News</a></string>

    <string
        name="messageWithLink4"><a href="https://www.bbc.com/news/coronavirus">BBC News</a></string>

    <string
        name="messageWithLink5"><a href="https://www.nbcnews.com/health/coronavirus">NBC News</a></string>

    <string
        name="messageWithLink6"><a href="https://www.usnews.com/topics/subjects/coronavirus">US News</a></string>

    <string name="facebook_app_id">3260321547525622</string>
    <string name="fb_login_protocol_scheme">fb3260321547525622</string>

</resources>
