<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/text_to_speech_light_red"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingTop="25dp"
    android:paddingRight="15dp"
    tools:context="fau.amoracen.speechmap.TextToSpeechFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/text_to_speech"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@drawable/edit_text_rounded"
        android:hint="@string/enter_text"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@drawable/backgroundgradient_red"
        android:padding="10dp"
        android:text="@string/text_to_speech"
        android:textSize="25sp" />
    <!-- Other views -->
    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/myNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        android:text="@string/myNameZNumber"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>